# madforhooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: dispatch_pre-commit.yml  tox.yml
madforhooks/: check_execution_order.py  check_test_naming.py  conda_env_sorter.py  no_print_statements.py
tests/: conftest.py  test_check_execution_order.py  test_check_test_naming.py  test_no_print_statements.py
tests/conda_env_sorter/: test_conda_env_sorter.py
tests/conda_env_sorter/data/: environment-dev-py38.yml
tests/data/: arguable.ipynb  bad.ipynb  good.ipynb
