[metadata]
name = madforhooks
version = 0.2.1
description = Random assorted pre-commit hooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MarcoGorelli/madforhooks
author = Marco Gorelli
license = MIT
license_file = LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Quality Assurance
keywords = conda, pre-commit
project_urls =
    Source = https://github.com/MarcoGorelli/madforhooks
    Tracker = https://github.com/MarcoGorelli/madforhooks/issues

[options]
packages = find:
py_modules = madforhooks
install_requires =
    ruamel.yaml>=0.15
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    conda-env-sorter = madforhooks.conda_env_sorter:main
    no-print-statements = madforhooks.no_print_statements:main
    check-execution-order = madforhooks.check_execution_order:main

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True

[flake8]
extend-ignore = E203,E503
max-line-length = 79

[mypy]
disallow_untyped_defs = True

[mypy-setup]
ignore_errors = True

[mypy-conf]
ignore_errors = True
