[metadata]
name = madforhooks
version = 0.4.1
description = Random assorted pre-commit hooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MarcoGorelli/madforhooks
author = Marco Gorelli
license = MIT
license_files = LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Quality Assurance
keywords = conda, pre-commit
project_urls =
    Source = https://github.com/MarcoGorelli/madforhooks
    Tracker = https://github.com/MarcoGorelli/madforhooks/issues

[options]
packages = find:
py_modules = madforhooks
install_requires =
    GitPython
    ruamel.yaml>=0.15
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    conda-env-sorter = madforhooks.conda_env_sorter:main
    no-print-statements = madforhooks.no_print_statements:main
    check-execution-order = madforhooks.check_execution_order:main
    check-test-naming = madforhooks.check_test_naming:main

[bdist_wheel]
universal = True

[flake8]
extend-ignore = E203,E503
max-line-length = 89

[mypy]
disallow_untyped_defs = True

[mypy-setup]
ignore_errors = True

[mypy-conf]
ignore_errors = True
